# evennia-ai-image-generator

./: .gitignore  ARCHITECTURE.md  BACKEND_API.md  BEHAVIOR_SPEC.md  DATA_MODEL.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  USER_MANUAL.md  pyproject.toml  requirements.txt
evennia_ai_image_generator/: __init__.py  commands.py  config.py  context.py  errors.py  mixins.py  prompts.py  queue.py  state.py
evennia_ai_image_generator/backend/: __init__.py  base.py  comfyui_backend.py  comfyui_queue.py  diffusers_backend.py  loader.py  placeholder.py
features/: builder_commands.feature  failure_handling.feature  look_pipeline.feature  output_clients.feature  performance_and_polish.feature  reference_and_backend_fallback.feature  refresh_and_reuse.feature
tests/: test_bdd_features.py
tests/integration/: test_evennia_installation.py
tests/unit/: test_backend_loader.py  test_comfyui_backend.py  test_commands.py  test_config.py  test_core_flow.py  test_diffusers_backend.py  test_package_imports.py  test_prompt_pipeline.py  test_state.py
